townify/notification/notfication-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: notification

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: townify-notification
  namespace: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: townify-notification
  template:
    metadata:
      labels:
        app: townify-notification
    containers:
      - name: notification-server
        image: mohammedayad10/townify-notification:latest
        ports:
          - containerPort: 3010
        resources:
          request:
            cpu: "1000m"
          limit:
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification
spec:
  selector:
    app: townify-notification
  ports:
    - name: notification-service
      protocol: TCP
      port: 3010
      targetPort: 3010
  type: ClusterIP
