townify/notification/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: notification
spec:
  ingressClassName: nginx
  rules:
    - host: townify-notification.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3010
